Revision history for Perl extension Devel::Method::Matrix.

0.05  2012-02-03
    - more POD cleanup
    - added test cases (still working on it)
    - fixed a couple of return values

0.04  2012-02-03
    - cleaned up broken tabs
    - fixed POD blocks of verbatim code

0.03  2012-02-03
	- renamed module to ::Trace::Method
	- renamed the hash key names that are stuffed into
	  the object that store the coderefs
	- renamed fetch_interactions() to fetch_trace()

0.02  2012-02-03
	- finish up pod
	- changed name from ::Interaction to ::Matrix

0.01  Fri Mar  2 12:21:39 2012
	- original version; created by h2xs 1.23 with options
		-XAn Devel::Method::Interaction
