@@ -1,5 +1,5 @@
 ---
-abstract: 'Track how your object methods interact'
+abstract: "Follow the flow of your object's method calls "
 author:
   - 'Steve Bertrand <steve@cpan.org>'
 build_requires:
@@ -18,4 +18,4 @@ no_index:
     - t
     - inc
 requires: {}
-version: 0.05
+version: 0.06
